[package]
name = "sfetch"
version = "1.2.2"
edition = "2018"
license = "BSD-3-Clause"
description = "A minimalistic and customizable fetching program written in Rust."
repository = "https://github.com/MattTheNub/sfetch.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
