[package]
description = "A minimalistic and customizable fetching program written in Rust."
edition = "2018"
license = "BSD-3-Clause"
name = "sfetch"
repository = "https://github.com/MattTheNub/sfetch.git"
version = "1.3.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
